# FHR-File-Converter

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  fhr.py  fhr.schema.json  fhr_schema.json  notes.txt  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: codacy.yml  pytest.yaml
examples/: example.json  example.microdata.html
fhr_file_converter/fhr/: __init__.py  fhr.py  fhr_convert.py  fhr_validate.py
fhr_file_converter/fhr/fasta/: fhr_fasta_combine.py  fhr_fasta_strip.py
gfa/: fhr_gfa_combine.py
lib/ffrgs/: __init__.py  __main__.py  ffrgs-convert.py  ffrgs-validate.py  ffrgs.py
lib/fhr/: fhr-combine-fasta.py  fhr-convert.py  fhr-fasta-strip.py  fhr-fasta-validate.py  fhr-gfa-strip.py  fhr-gfa-validate.py  fhr-validate.py  fhr.py  fhr_convert.py  fhr_validate.py
lib/fhr/fasta/: fhr_fasta_combine.py  fhr_fasta_strip.py  fhr_fasta_validate.py
lib/fhr/gfa/: fhr_gfa_combine.py  fhr_gfa_strip.py  fhr_gfa_validate.py
src/ffrgs/: __init__.py  __main__.py  class.py  format.py  header.py
tests/: ffrgs.t.py  ffrgs_test.py  fhr_test.py  header.t.py
