[tool.flake8]
max-line-length = 120
ignore = "E203, E266, E501, W503"

[tool.poetry]
name = "fhr-file-converter"
version = "0.1.0"
description = "This tool is used to validate and convert between different FHR header serializations"
authors = ["David Molik <david.molik@usda.gov>"]
license = "USDA-ARS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
microdata = "^0.8.0"
jsonschema = "^4.21.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
