[tool.flake8]
max-line-length = 120
ignore = "E203, E266, E501, W503"

[tool.poetry]
name = "fhr-file-converter"
version = "0.1.0"
description = "This tool is used to validate and convert between different FHR header serializations"
authors = ["David Molik <david.molik@usda.gov>"]
license = "USDA-ARS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
microdata = "^0.8.0"
jsonschema = "^4.21.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-jsonschema = "^4.21.0.20240118"
isort = "^5.13.2"
black = "^24.1.1"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
