[tool.flake8]
max-line-length = 120
ignore = "E203, E266, E501, W503"

[tool.poetry]
name = "fhr"
version = "0.1.1"
description = "This tool is used to validate and convert between different FHR header serializations"
authors = ["David Molik <david.molik@usda.gov>","Adam Wright <adam.wright@oicr.on.ca>"]
license = "USDA-ARS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
microdata = "^0.8.0"
jsonschema = "^4.21.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-jsonschema = "^4.21.0.20240118"
isort = "^5.13.2"
black = "^24.1.1"
ruff = "^0.2.1"

[tool.poetry.scripts]
fhr-convert = "fhr_convert:main"
fhr-validate = "fhr_validate:main"
fhr-fasta-strip = "fasta.fhr_fasta_strip:main"
fhr-fasta-combine = "fasta.fhr_fasta_combine:main"
fhr-fasta-validate = "fasta.fhr_fasta_validate:main"
fhr-gfa-strip = "gfa.fhr_gfa_strip:main"
fhr-gfa-combine = "gfa.fhr_gfa_combine:main"
fhr-gfa-validate = "gfa.fhr_gfa_validate:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

