[metadata]
name = ffrgs
version = 0.0.1
author = David Molik
author_email = david.molik@usda.gov
description = ffrgs conversion and validation scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FFRGS/FFRGS-Conversions
project_urls =
    Bug Tracker = https://github.com/FFRGS/FFRGS-Conversions/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: Public Domain
    Natural Language :: English
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics
    

[options]
package_dir = 
    = lib
install_requires =
    argparse>=1.1
    microdata>=0.8.0
packages = find:
python_requires = >=3.6

[options.entry_points]
[console_scripts]
    ffrgs-convert = ffrgs.ffrgs-convert:main
    ffrgs-validate = ffrgs.ffrgs-validate:main

[options.packages.find]
where = lib
